--- a/app/styles/sass/blocks/_general.scss
+++ b/app/styles/sass/blocks/_general.scss
@@ -8,6 +8,7 @@
    outline: none;
    background-color: $mainColor;
    text-align: center;
+   font-weight: 500;
    background: linear-gradient(180deg, #259385 0%, #159685 100%);
    box-shadow: 0px 20px 40px rgba(21, 113, 101, 0.2);
    border-radius: 50px;
