--- a/app/styles/sass/blocks/_cards.scss
+++ b/app/styles/sass/blocks/_cards.scss
@@ -7,10 +7,9 @@
       }
    }
    &__item {
-      // background: center/110% no-repeat url(../../../images/src/Cards/meditationB.svg);
-      background-image: url(../../../images/src/Cards/meditationB.svg);
-      background-position: top;
-      // background-size: cover;
+      // background-image: url(../../../images/src/Cards/meditationB.svg);
+
+      position: relative;
       text-align: center;
       width: 490px;
       height: 605px;
@@ -19,6 +18,13 @@
       align-items: center;
       padding: 50px;
       position: relative;
+      &-bg {
+         height: 650px;
+         z-index: -1;
+         position: absolute;
+         top: -20px;
+         left: 0;
+      }
    }
    img {
       padding-top: 40px;
