--- a/app/styles/sass/blocks/_practice.scss
+++ b/app/styles/sass/blocks/_practice.scss
@@ -29,7 +29,7 @@
             align-self: center;
             width: 720px;
             padding: 35px 40px;
-            margin-bottom: 5px;
+            margin-bottom: 10px;
             h6 {
                font-weight: 500;
                font-size: 32px;
@@ -41,20 +41,23 @@
                margin-bottom: 5px;
             }
             button {
-               display: none;
+               opacity: 0;
                align-self: flex-end;
-            }
-         }
-         li.active {
-            background-color: #fff;
-            border-radius: 20px;
-            button {
-               display: block;
                outline: none;
                background-color: inherit;
                border: none;
             }
          }
+         li.active {
+            background-color: #fff;
+            box-shadow: 0px 8px 50px rgba(26, 127, 114, 0.2);
+            border-radius: 20px;
+            button {
+               opacity: 1;
+              
+            }
+         }
       }
    }
 }
+
