--- a/app/styles/sass/blocks/_header.scss
+++ b/app/styles/sass/blocks/_header.scss
@@ -67,11 +67,11 @@
             list-style-type: none;
             align-self: center;
             a {
-               font-size: 10px;
-               line-height: 47px;
+               font-size: 25px;
+               line-height: 35px;
                font-weight: 500;
                color: #000;
-               padding: 0 40px;
+               padding: 0 30px;
                width: 100%;
                height: 100%;
                text-align: center;
@@ -86,7 +86,7 @@
                      height: 7px;
                      border-radius: 4px 4px 0px 0px;
                      background-color: $mainColor;
-                     bottom: -40px;
+                     bottom: -47px;
                      left: 0;
                   }
                }
@@ -95,4 +95,28 @@
       }
    }
    
+}
+
+@media (max-width: 1024px) {
+   .logo {
+      width: 110px;
+   }
+   .header {
+      ul {
+         li {
+            a {
+               padding: 0 18px;
+            }
+         }
+      }
+   }
+   
+   
+}
+@media (max-width: 768px) {
+   .header {
+      ul {
+         display: none;
+      }
+   }
 }
