--- a/app/styles/sass/blocks/_header.scss
+++ b/app/styles/sass/blocks/_header.scss
@@ -38,7 +38,7 @@
                   height: 7px;
                   border-radius: 4px 4px 0px 0px;
                   background-color: $mainColor;
-                  bottom: -42px;
+                  bottom: -44px;
                   left: 0;
                }
             }
@@ -50,35 +50,17 @@
 
 @media (max-width: 1600px) {
    .header {
-      height: 130px;
-      background-color: #ffff;
       &__inner {
-         height: 130px;
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
       }
       ul {
-         display: flex;
-         margin-left: 0;
-         padding-left: 0;
-         text-decoration: none;
          li {
-            list-style-type: none;
-            align-self: center;
             a {
-               font-size: 25px;
-               line-height: 35px;
+               font-size: 22px;
+               line-height: 32px;
                font-weight: 500;
                color: #000;
                padding: 0 30px;
-               width: 100%;
-               height: 100%;
-               text-align: center;
                &.active {
-                  color: $mainColor;
-                  overflow: hidden;
-                  position: relative;
                   &::before {
                      position: absolute;
                      content: '';
@@ -86,7 +68,7 @@
                      height: 7px;
                      border-radius: 4px 4px 0px 0px;
                      background-color: $mainColor;
-                     bottom: -47px;
+                     bottom: -49px;
                      left: 0;
                   }
                }
@@ -97,6 +79,12 @@
    
 }
 
+.menu {
+   &__icon {
+      display: none;
+   }
+}
+
 @media (max-width: 1024px) {
    .logo {
       width: 110px;
@@ -105,7 +93,14 @@
       ul {
          li {
             a {
-               padding: 0 18px;
+               font-size: 20px;
+               line-height: 32px;
+               padding: 0 15px;
+               &.active {
+                  &::before {
+                     bottom: -51px;
+                  }
+               }
             }
          }
       }
@@ -117,6 +112,39 @@
    .header {
       ul {
          display: none;
+      }
+   }
+
+   .menu {
+      &__icon {
+         z-index: 21;
+         display: block;
+         position: relative;
+         width: 30px;
+         height: 25px;
+         cursor: pointer;
+         &::before, &::after, span {
+            left:  0;
+            position: absolute;
+            border-radius: 1px;
+            height: 4px;
+            width: 100%;
+            transition: all 0.3s ease 0s;
+            background-color: $mainColor; 
+         }
+         &::before, &::after {
+            content: '';
+         }  
+         &::before {
+            top: 0;
+         }
+         &::after {
+            bottom: 0;
+         }
+         span {
+           top: 50%;
+           transform: scale(1) translate(0px -50%); 
+         }
       }
    }
 }
