--- a/app/styles/sass/blocks/_header.scss
+++ b/app/styles/sass/blocks/_header.scss
@@ -1,6 +1,8 @@
 .header {
    z-index: 20;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   background-color: #ffff;
    &__inner {
@@ -110,17 +112,17 @@
 }
 @media (max-width: 768px) {
    .header {
-      ul {
-         display: none;
-      }
+     
    }
 
    .menu {
+      transition: left 0.3 ease 0s;
+      position: relative;
       &__icon {
          z-index: 21;
          display: block;
          position: relative;
-         width: 30px;
+         width: 40px;
          height: 25px;
          cursor: pointer;
          &::before, &::after, span {
@@ -144,6 +146,81 @@
          span {
            top: 50%;
            transform: scale(1) translate(0px -50%); 
+         }
+         &.active {
+            span {
+               transform: scale(0) translate(0px, -50%);
+            }
+            &::before {
+               top: 50%;
+               transform: rotate(-45deg) translate(0px, -50%);
+            }
+            &::after {
+               bottom: 50%;
+               transform: rotate(45deg) translate(0px, 50%);
+            }
+         }
+      }
+      &__body {
+         z-index: 0;
+         overflow: auto;
+         position: fixed;
+         top: 0;
+         left: -100%;
+         width: 100vw;
+         height: 100%;
+         background-color: rgba($color: #fff, $alpha: 1);
+         padding: 50px 50px;
+         transition: all 0.3s ease 0s;
+         &::before {
+            content: '';
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            height: 130px;
+            z-index: 22;
+             background-color: #fff;
+         }
+         &::after {
+            content: '';
+            z-index: 23;
+            position: fixed;
+            width: 120px;
+            height: 120px;
+            background-image: url(../../../images/src/Logo.svg);
+            background-repeat: no-repeat;
+            background-position: left;
+            background-size: contain;
+            left: 10px;
+            top: 0;
+         }
+         &.active{
+            transition: left 0.3 ease 0s;
+           left: 0;
+         }
+         ul {
+            margin-top: 120px;
+            overflow: auto;
+            flex-direction: column;
+            li {
+               a {
+                  display: inline-block;
+                  width: 200px;
+                  padding: 20px 30px;
+                  border-radius: 30px;
+                  margin-bottom: 10px;
+                  font-size: 30px;
+                  &.active {
+                     background-color: $mainColor;
+                     color: #fff;
+                     &::before {
+                        display: none;
+                     }
+                  }
+             
+               }
+            }
          }
       }
    }
