--- a/app/styles/sass/blocks/_breath.scss
+++ b/app/styles/sass/blocks/_breath.scss
@@ -7,7 +7,12 @@
    &__title {
       @extend .section__title-pos;
       h3 {
-         @extend .section__title;  
+         text-align: center;
+         font-family: 'Merienda One', cursive;
+         font-size: 54px;
+         line-height: 130%;
+         color: #000;
+         margin-bottom: 22px; 
       }
       p {
          max-width: 1105px;
@@ -38,6 +43,7 @@
             }
             button {
                width: 90px;
+               height: 90px;
                img {
                   margin: 0 auto;
                }
@@ -96,6 +102,66 @@
       &__title {
          h3 {
             font-size: 46px;
+         }
+         p {
+            font-size: 20px;
+            line-height: 110%;
+         }
+      }
+   }
+}
+
+@media(max-width: 640px) {
+   .breath {
+      &__content {
+         ul {
+            li {
+               background-color: rgba($color: #1A7F72, $alpha: 0.3);
+               border: #1A7F72 1px solid;
+               border-radius: 20px;
+               padding: 20px;
+               width: 400px;
+               align-items: center;
+               margin-bottom: 20px;
+               h6 {
+                  font-size: 28px;
+               }
+               p {
+                  font-size: 20px;
+               }
+               button {
+                  width: 60px;
+                  height: 60px;
+               }
+            }
+         }
+      }
+      &__item-bg {
+        display: none;
+
+      }
+   }
+}
+@media(max-width: 435px) {
+   .breath {
+      &__content {
+         ul {
+            li {
+
+               width: 310px;
+               margin-bottom: 10px;
+               h6 {
+                  font-size: 18px;
+                  margin-bottom: 1px;
+               }
+               button {
+                  width: 50px;
+                  height: 50px;
+               }
+               p {
+                  font-size: 16px;
+               }
+            }
          }
       }
    }
