--- a/app/styles/sass/blocks/_transform.scss
+++ b/app/styles/sass/blocks/_transform.scss
@@ -21,6 +21,7 @@
          margin: 0 auto;
          width: 100%;
          li {
+            margin-bottom: 50px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -54,3 +55,89 @@
    }
 }
 
+@media (max-width: 1200px) {
+   .transform {
+      &__content {
+         ul {
+            li {
+               img {
+                  width: 500px;
+
+               }
+            }
+         }
+      }
+   }
+}
+
+@media (max-width: 868px) {
+   .transform {
+      padding: 0;
+      &__title {
+         h3 {
+            font-size: 40px;
+         }
+         p {
+            font-size: 20px;
+            margin-bottom: 20px;
+         }
+      }
+      &__content {
+         ul {
+            li {
+               margin-bottom: 20px;
+               .info {
+                  h6 {
+                     font-size: 28px;
+                  }
+                  p {
+                     font-size: 20px;
+                     line-height: 110%;
+                  }
+               } 
+            }
+         }
+      }
+   }
+}
+@media (max-width: 767px) {
+   .transform {
+      &__content {
+         ul {
+            li {
+               
+               margin-bottom: 100px;
+               position: relative;
+               display: flex;
+               justify-content: center;
+               img {
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  opacity: 0.2;
+                  z-index: 0;
+               }
+               .info {
+                 z-index: 10;
+                  padding: 30px;
+                  border-radius: 40px;
+                  border: $mainColor 2px solid;
+                  background-color: rgba($color: #1A7F72, $alpha: 0.3);
+               }
+            }
+         }
+      }
+   }
+}
+
+@media (max-width: 500px) {
+   .transform {
+      &__content {
+         ul {
+            li {
+               margin-bottom: 30px;
+            }
+         }
+      }
+   }
+}
