--- a/app/styles/sass/blocks/_practice.scss
+++ b/app/styles/sass/blocks/_practice.scss
@@ -30,6 +30,7 @@
             width: 720px;
             padding: 35px 40px;
             margin-bottom: 10px;
+            transition: all 0.3s ease 0s;
             h6 {
                font-weight: 500;
                font-size: 32px;
