--- a/app/styles/sass/blocks/_transform.scss
+++ b/app/styles/sass/blocks/_transform.scss
@@ -111,11 +111,7 @@
                display: flex;
                justify-content: center;
                img {
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  opacity: 0.2;
-                  z-index: 0;
+                  display: none;
                }
                .info {
                  z-index: 10;
