--- a/app/styles/sass/blocks/_getstart.scss
+++ b/app/styles/sass/blocks/_getstart.scss
@@ -1,7 +1,7 @@
 .getstart {
    margin-bottom: 10px;
    padding-bottom: 70px;
-   background-image: url(../../../images/dist/MainTop/BGvector.svg);
+   background-image: url(../images/dist/MainTop/BGvector.svg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
