--- a/app/styles/sass/blocks/_meditation.scss
+++ b/app/styles/sass/blocks/_meditation.scss
@@ -1,7 +1,7 @@
 
 $needcolor: linear-gradient(270deg, #378377 0%, rgba(176, 234, 226, 0) 100%);
 .meditation {
-   background-image: url(../../../images/dist/meditation/Background.svg);
+   background-image: url(../images/dist/meditation/Background.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
