--- a/app/styles/sass/blocks/_practice.scss
+++ b/app/styles/sass/blocks/_practice.scss
@@ -1,5 +1,5 @@
 .practice {
-   background-image: url(../../../images/dist/Practice/background.svg);
+   background-image: url(../images/dist/Practice/background.svg);
    background-position: right;
    background-repeat: no-repeat;
    padding: 70px;
