--- a/app/styles/sass/blocks/_transform.scss
+++ b/app/styles/sass/blocks/_transform.scss
@@ -1,6 +1,6 @@
 .transform {
    padding: 67px 0;
-   background-image: url(../../../images/dist/transform/background.svg);
+   background-image: url(../images/dist/transform/background.svg);
    background-repeat: no-repeat;
    background-position: left;
    background-size: cover;
