--- a/app/styles/sass/blocks/_header.scss
+++ b/app/styles/sass/blocks/_header.scss
@@ -191,7 +191,7 @@
             position: fixed;
             width: 80px;
             height: 80px;
-            background-image: url(../../../images/dist/Logo.svg);
+            background-image: url(../images/dist/Logo.svg);
             background-repeat: no-repeat;
             background-position: left;
             background-size: contain;
