--- a/app/styles/sass/blocks/_breath.scss
+++ b/app/styles/sass/blocks/_breath.scss
@@ -48,7 +48,7 @@
                   margin: 0 auto;
                }
                audio {
-                  display: none;
+                display: none;
                }
             }
          }
@@ -75,6 +75,7 @@
       display: none;
    }
 }
+
 
 @media(max-width: 1380px) {
    .breath {
@@ -140,6 +141,10 @@
         display: none;
 
       }
+   }
+   .button--pause-img {
+      width: 20px;
+      height: 20px;
    }
 }
 @media(max-width: 435px) {
