--- a/app/styles/sass/blocks/_popup.scss
+++ b/app/styles/sass/blocks/_popup.scss
@@ -152,6 +152,7 @@
          height: 100%;
       }
       &__inner {
+         border-radius: 0;
          overflow: auto;
          width: 100%;
          height: 100%;
